Final activites = Checkerboard doesn't collum, Circle grow works, Diagnol Square is for testing

--- a/DiagnolSquare.html
+++ b/DiagnolSquare.html
@@ -44,9 +44,8 @@ https://entertainmenttechnology.github.io/Wilson-MTEC1003/labs/12/canvas.html#16
 
 
             }
-////////////////////////////////////////
-
-
+// Diagnol Circle: context.arc((i * 50), (i * 50), 20, 0, 2 * Math.PI, true);
+ //<--Clockwise = true
 
 
             }
@@ -54,8 +53,13 @@ https://entertainmenttechnology.github.io/Wilson-MTEC1003/labs/12/canvas.html#16
 		}
     }
 
-
-
+//
+//    function Circle(context, r) {
+// Horizontal values must be changed remember
+//    if(r%2==1) {        
+//        context.fillstyle = "#A9F50C";                
+//        context.fillRect((r * 45),(r * 50), 30, 30);
+        
 
         
 
